--- a/app/src/main/res/layout/activity_store_editor_landing_page.xml
+++ b/app/src/main/res/layout/activity_store_editor_landing_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,120 +8,95 @@
     android:layout_height="match_parent"
     tools:context="com.softmarshmallow.foodle.Views.StoreEditorV3.StoreEditorLandingPageActivity">
 
+
     <android.support.constraint.ConstraintLayout
-        android:layout_width="0dp"
-        android:layout_height="175dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="176dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="229dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:maxLines="3"
-            android:minLines="2"
-            android:text="푸드트럭의 이름 설명 태그 연락처등을 입력합니다"
-            android:textColor="@color/textLightDark"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView15"/>
-
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
-            android:layout_height="@color/textLightDark"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="기본정보부터 시작하죠"
-            android:textColor="@color/textLightDark"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-
-        <mehdi.sakout.fancybuttons.FancyButton
-            android:id="@+id/continueButton"
-            android:layout_width="110dp"
-            android:layout_height="40dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            app:fb_defaultColor="@color/colorPrimaryDark"
-            app:fb_focusColor="@color/colorPrimaryDark"
-            app:fb_radius="18dp"
-            app:fb_text="계속하기"
-            app:fb_textColor="@color/textWhite"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView10"/>
-
-
-        <View
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:background="@color/dividerLight"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-
-    </android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="0dp"
-        android:layout_height="155dp"
-        android:background="@color/primary_dark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="16dp"
-            android:adjustViewBounds="true"
-            android:background="#00000000"
-            android:scaleType="fitXY"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_x"/>
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="270dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="16dp"
-            android:lines="2"
-            android:maxLines="2"
-            android:text="당신의 멋진 푸드트럭을 공개해 주세요"
-            android:textColor="@color/textWhite"
-            android:textSize="26sp"
-            android:textStyle="bold"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+
+            <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:descriptionText="푸드트럭의 이름 설명 태그 연락처등을 입력합니다"
+                app:titleText="기본정보부터 시작하죠"
+                />
+
+            <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:descriptionText="현제 푸드트럭의 위치를 알려주세요, 앞으로도 이곳에서 업데이트 할수있습니다."
+                app:titleText="위치를 알려주세요"
+                />
+
+
+            <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:descriptionText="당신의 푸드트럭을 잘 나타내는 사진과 설명을 입력하게됩니다."
+                app:titleText="비쥬얼을 추가합시다"
+                />
+
+            <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:descriptionText="메뉴의 이름, 가격, 사진등을 입력하게 됩니다."
+                app:titleText="메뉴를 알려주세요"
+                />
+
+        </LinearLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout2"
+            android:layout_width="0dp"
+            android:layout_height="155dp"
+            android:background="@color/primary_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton"/>
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="16dp"
+                android:adjustViewBounds="true"
+                android:background="#00000000"
+                android:scaleType="fitXY"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_x"/>
+
+            <TextView
+                android:id="@+id/descriptionTextView"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="16dp"
+                android:lines="2"
+                android:maxLines="2"
+                android:text="당신의 멋진 푸드트럭을 공개해 주세요"
+                android:textColor="@color/textWhite"
+                android:textSize="26sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageButton"/>
+        </android.support.constraint.ConstraintLayout>
+
+
     </android.support.constraint.ConstraintLayout>
 
+</ScrollView>
 
-</android.support.constraint.ConstraintLayout>
