--- a/app/src/main/res/layout/activity_photo_selector_first.xml
+++ b/app/src/main/res/layout/activity_photo_selector_first.xml
@@ -51,30 +51,30 @@
         android:layout_width="141dp"
         android:layout_height="44dp"
         android:layout_centerVertical="true"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="24dp"
         app:fb_defaultColor="@color/colorILight"
         app:fb_focusColor="@color/colorPrimaryDark"
         app:fb_radius="36dp"
         app:fb_text="지금 등록하기"
         app:fb_textColor="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@+id/textView15"
-        tools:layout_editor_absoluteX="26dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/SaveButton"
         android:layout_width="141dp"
         android:layout_height="44dp"
         android:layout_centerVertical="true"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        app:fb_radius="36dp"
-        app:layout_constraintTop_toBottomOf="@+id/RightNowButton"
-        tools:layout_editor_absoluteX="26dp"
-
         app:fb_borderColor="@color/colorPrimaryDark"
+
         app:fb_borderWidth="3dp"
         app:fb_defaultColor="#0000"
         app:fb_focusColor="@color/colorPrimaryDark"
+        app:fb_radius="36dp"
         app:fb_text="나중에 다시오기"
         app:fb_textColor="@color/colorPrimaryDark"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RightNowButton" />
 </android.support.constraint.ConstraintLayout>
