--- a/app/src/main/res/layout/list_item_minimal.xml
+++ b/app/src/main/res/layout/list_item_minimal.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
-    android:clickable="true">
+    android:clickable="true"
+    android:layout_margin="23dp"
+    >
 
     <TextView
         android:id="@android:id/text1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="241dp"
+        android:layout_height="241dp"
         android:gravity="center"/>
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="241dp"
+        android:layout_height="241dp"
         android:id="@+id/ImageSelecterImage"
-        android:src="@drawable/menu"/>
+        android:src="@drawable/menu"
+        android:scaleType="centerCrop"
+        />
 
 </FrameLayout>
