--- a/app/src/main/res/layout/list_item_minimal.xml
+++ b/app/src/main/res/layout/list_item_minimal.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
-    android:layout_margin="23dp"
-    >
+    android:layout_margin="23dp">
 
-    <TextView
-        android:id="@android:id/text1"
-        android:layout_width="241dp"
-        android:layout_height="241dp"
-        android:gravity="center"/>
     <ImageView
         android:layout_width="241dp"
         android:layout_height="241dp"
@@ -21,4 +15,20 @@
         android:scaleType="centerCrop"
         />
 
-</FrameLayout>
+    <TextView
+        android:id="@android:id/text1"
+        android:layout_width="54dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="9dp"
+        android:layout_marginStart="8dp"
+        android:background="@color/mdtp_light_gray"
+        android:gravity="center"
+        android:text="test"
+
+        android:textColor="@color/ms_white"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+</android.support.constraint.ConstraintLayout>
