--- a/app/src/main/res/layout/card_photo_queue.xml
+++ b/app/src/main/res/layout/card_photo_queue.xml
@@ -12,10 +12,11 @@
         android:layout_width="241dp"
         android:layout_height="241dp"
         android:id="@+id/ImageSelecterImage"
-        android:src="@drawable/menu"
+        android:src="@drawable/demo_menu_real_image"
         android:scaleType="centerCrop"
         />
 
+    <!--TODO-->
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/TextBG"
         android:layout_width="54dp"
