--- a/app/src/main/res/layout/fragment_photo_queue_editor.xml
+++ b/app/src/main/res/layout/fragment_photo_queue_editor.xml
@@ -14,7 +14,8 @@
        See the License for the specific language governing permissions and
        limitations under the License.
 -->
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -38,7 +39,7 @@
 
 
     <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/confirmButton"
+        android:id="@+id/UploadPhotoButton"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_centerVertical="true"
