--- a/app/src/main/res/layout/fragment_extra_options_view.xml
+++ b/app/src/main/res/layout/fragment_extra_options_view.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -70,13 +68,13 @@
                     android:background="#ACACAC"/>
 
                 <Button
-                    android:id="@+id/CreateNewFestivalButton"
+                    android:id="@+id/StoreUploadRequestButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/white"
                     android:gravity="left|center_vertical"
                     android:paddingLeft="30dp"
-                    android:text="행사 등록하기"
+                    android:text="푸드 트럭 등록 신청"
                     android:textAppearance="@android:style/TextAppearance.Material"/>
 
                 <View
