--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,8 @@
 
         <item name="android:actionBarStyle">@style/ActionBar</item>
 
+        <item name="android:textColor">@color/textDark</item>
+
     </style>
 
     <style name="AppTheme.WithActionBar" parent="AppTheme">
@@ -67,7 +69,6 @@
     </style>
 
 
-
     <!--TextAppearance-->
     <style name="TextAppearance.Large" parent="android:TextAppearance">
         <item name="android:textSize">26sp</item>
@@ -94,14 +95,6 @@
 
 
     <!--Fonts-->
-
-    <style name="AppFont.Thin" parent="android:TextAppearance">
-        <!-- Custom Attr-->
-        <item name="fontPath">fonts/NanumBarunGothicLight.otf</item>
-
-        <!--<item name="fontPath">fonts/NotoSansUI-Regular.ttf</item>-->
-    </style>
-
 
     <!--region divider-->
     <style name="Divider">
