--- a/app/src/main/res/layout/fragment_featured_inside_view_v3.xml
+++ b/app/src/main/res/layout/fragment_featured_inside_view_v3.xml
@@ -1,16 +1,17 @@
-
-    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.NestedScrollView
+     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.softmarshmallow.foodle.Views.MainTabController.MainTabControllerActivity"
-    tools:showIn="@layout/fragment_featured_view_v2">
+    tools:showIn="@layout/fragment_featured_view_v3">
     <!-- TODO: Update blank fragment layout -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:orientation="vertical"
             android:layout_marginStart="18dp"
             >
@@ -27,5 +28,8 @@
                 android:id="@+id/view3"
                 layout="@layout/view_default_recycler_container_view"/>
 
+            <!--<me.gujun.android.taggroup.TagGroup-->
+                <!--android:id="@+id/TagView"-->
+                <!--/>-->
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
