--- a/app/src/main/res/layout/fragment_featured_view_v3.xml
+++ b/app/src/main/res/layout/fragment_featured_view_v3.xml
@@ -48,12 +48,13 @@
                     android:scaleType="fitCenter"
                     android:src="@drawable/menu"
                     android:tint="@color/colorPrimaryDark"/>
-            </android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.CollapsingToolbarLayout>
+            </android.support.v7.widget.Toolbar></android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/fragment_featured_inside_view_v3"></include>
+    <include
+
+        layout="@layout/fragment_featured_inside_view_v3"
+        ></include>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
