--- a/app/src/main/res/layout/view_default_recycler_container_view.xml
+++ b/app/src/main/res/layout/view_default_recycler_container_view.xml
@@ -34,5 +34,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/titleText"
-        tools:layout_editor_absoluteX="0dp"></android.support.v7.widget.RecyclerView>
+        tools:layout_editor_absoluteX="0dp">
+    </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
